Added support for Collectors.